1. 교차로 상세 통계 수정(crossroads_stats_view.html) 2. map_crossroad_view.html 통계탭 수정 및 영상/돌발탭 작업 3. gnb 메뉴 style 수정

--- a/base/html/crossroads_stats_view.html
+++ b/base/html/crossroads_stats_view.html
@@ -157,6 +157,10 @@
                     </div>
                     <!-- //chart-wrap -->
                   </li>
+                </ul>
+                <!-- 230825 차종 별 교통량 영역 구분 및 분리 -->
+                <h2>범지기마을 차종 별 교통량</h2>
+                <ul>
                   <li>
                     <div class="chart-wrap">
                       <h3>아름동 행정복지센터 방면</h3>
