1. 교차로 영상 탭 수정 2. 교차로 돌발 탭 수정 3. 지도팝업(map_main2.html) 수정 4. 영상인식 ROI 설정(crossroads_roi_set_tab.html) 수정

--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -591,9 +591,10 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>IBM 설정 여부</th>
+                    <th>IPM 설정 여부</th>
                     <td>
-                      <div class="ibm txt-center">
+                      <!-- 230829 클래스명 수정 : ibm -> ipm으로 변경 -->
+                      <div class="ipm txt-center">
                         <div class="ui checkbox primary-chkbox xs c-bluesky">
                           <input id="chk1" type="checkbox" />
                           <label for="chk1">ON</label>
