--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -430,6 +430,86 @@
                       <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
                     </td>
                   </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>미확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>미확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>미확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>미확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>11:30:15</td>
+                    <td>00방면</td>
+                    <td>북</td>
+                    <td>정지</td>
+                    <td>확인</td>
+                    <td>
+                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
